# socrates-dash-game

./: .gitignore  CMakeLists.txt  README.md  build.sh  pack_windows.sh  test_launcher.bat
source/: AppClass.cpp  AppClass.hpp  Entity.hpp  Main.cpp  Test.h  main.cpp
source/Entities/: Button.cpp  Crate.cpp  Entity.cpp  Frame.cpp  Platform.cpp  Ranch.cpp  Socrates.cpp  Text.cpp
source/Loops/: GameLoop.cpp  MainLoop.cpp  StartLoop.cpp
